--- a/common_services/cone_ear/src/main/resources/cone.properties
+++ b/common_services/cone_ear/src/main/resources/cone.properties
@@ -34,6 +34,9 @@ escidoc.pubman.component.pattern=${escidoc.pubman.component.pattern}
 # URL of the FIZ framework instance
 escidoc.framework_access.framework.url=${escidoc.common.framework.url}
 
+# URL of the escidoc-core instance you like to logon to
+escidoc.framework_access.login.url=${escidoc.framework_access.login.url}
+
 # Identifier of the content type "publication" in the actual framework instance
 escidoc.framework_access.content-model.id.publication=${escidoc.framework_access.content-model.id.publication}
 
@@ -92,3 +95,34 @@ escidoc.cone.rdf.path=${escidoc.cone.rdf.path}
 
 #Path to the model.xml file
 escidoc.cone.modelsxml.path=${escidoc.cone.modelsxml.path}
+
+# URL for stylesheets in common-presentation
+escidoc.common.presentation.url=${escidoc.common.presentation.url}
+
+# Properties for common standard theme
+escidoc.common.stylesheet.standard.url=${escidoc.common.stylesheet.standard.url}
+escidoc.common.stylesheet.standard.type=${escidoc.common.stylesheet.standard.type}
+escidoc.common.stylesheet.standard.apply=${escidoc.common.stylesheet.standard.apply}
+
+# Properties for common contrast theme
+escidoc.common.stylesheet.contrast.url=${escidoc.common.stylesheet.contrast.url}
+escidoc.common.stylesheet.contrast.type=${escidoc.common.stylesheet.contrast.type}
+escidoc.common.stylesheet.contrast.apply=${escidoc.common.stylesheet.contrast.apply}
+
+# Properties for common classic theme
+escidoc.common.stylesheet.classic.url=${escidoc.common.stylesheet.classic.url}
+escidoc.common.stylesheet.classic.type=${escidoc.common.stylesheet.classic.type}
+escidoc.common.stylesheet.classic.apply=${escidoc.common.stylesheet.classic.apply}
+
+# AA
+escidoc.aa.instance.url=${escidoc.aa.instance.url}
+escidoc.aa.default.target=${escidoc.aa.default.target}
+escidoc.aa.public.key.file=${escidoc.aa.public.key.file}
+escidoc.aa.private.key.file=${escidoc.aa.private.key.file}
+
+escidoc.aa.config.file=${escidoc.aa.config.file}
+escidoc.aa.ip.table=${escidoc.aa.ip.table}
+
+#escidoc.aa.client.class=de.mpg.escidoc.services.aa.web.client.IpAaClient
+escidoc.aa.client.start.class=${escidoc.aa.client.start.class}
+escidoc.aa.client.finish.class=${escidoc.aa.client.finish.class}
