--- a/common_services/cone_ear/src/test/resources/cone.properties
+++ b/common_services/cone_ear/src/test/resources/cone.properties
@@ -62,7 +62,7 @@ db.superuser.password=${db.superuser.password}
 escidoc.pubman.external.organisation.id=${escidoc.pubman.external.organisation.id}
 
 # CoNE service URL
-escidoc.cone.service.url=${escidoc.cone.service.url}
+escidoc.cone.service.url=http://localhost:8080/cone/
 
 # COntrol of Named Entities database interface class
 escidoc.cone.querier.class=de.mpg.escidoc.services.cone.MockQuerier
