--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -467,7 +467,27 @@
 		<escidoc.pubman.stylesheet.classic.url>/common/resources/cssFramework/themes/skin_classic/styles/theme.css</escidoc.pubman.stylesheet.classic.url>
 		<escidoc.pubman.stylesheet.classic.type>alternate stylesheet</escidoc.pubman.stylesheet.classic.type>
 		<escidoc.pubman.stylesheet.classic.apply>true</escidoc.pubman.stylesheet.classic.apply>
+				
+		<!--Common presentation -->
+				
+		<!-- URL of stylesheets in common-presentation -->
+		<escidoc.common.presentation.url>http://localhost:8080/common/</escidoc.common.presentation.url>
+
+		<!-- Properties for common standard theme-->
+		<escidoc.common.stylesheet.standard.url>/common/resources/cssFramework/themes/skin_MPG/styles/theme.css</escidoc.common.stylesheet.standard.url>
+		<escidoc.common.stylesheet.standard.type>stylesheet</escidoc.common.stylesheet.standard.type>
+		<escidoc.common.stylesheet.standard.apply>true</escidoc.common.stylesheet.standard.apply>
 		
+		<!-- Properties for common contrast theme-->
+		<escidoc.common.stylesheet.contrast.url>/common/resources/cssFramework/themes/skin_highContrast/styles/theme.css</escidoc.common.stylesheet.contrast.url>
+		<escidoc.common.stylesheet.contrast.type>alternate stylesheet</escidoc.common.stylesheet.contrast.type>
+		<escidoc.common.stylesheet.contrast.apply>true</escidoc.common.stylesheet.contrast.apply>
+		
+		<!-- Properties for common classic theme-->
+		<escidoc.common.stylesheet.classic.url>/common/resources/cssFramework/themes/skin_classic/styles/theme.css</escidoc.common.stylesheet.classic.url>
+		<escidoc.common.stylesheet.classic.type>alternate stylesheet</escidoc.common.stylesheet.classic.type>
+		<escidoc.common.stylesheet.classic.apply>true</escidoc.common.stylesheet.classic.apply>
+
 		<!-- Properties of the favicon-->
 		<escidoc.pubman.favicon.url>./resources/pubman_favicon.ico</escidoc.pubman.favicon.url>
 		<escidoc.pubman.favicon.apply>true</escidoc.pubman.favicon.apply>
@@ -636,6 +656,15 @@
 		
 		<escidoc.pubman.genres.configuration>Genres.xml</escidoc.pubman.genres.configuration>
 		
+		<!-- AA -->
+		<escidoc.aa.instance.url>http://localhost:8080/aa_presentation</escidoc.aa.instance.url>
+		<escidoc.aa.default.target>http://localhost:8080/aa_presentation/clientLogin</escidoc.aa.default.target>
+		<escidoc.aa.public.key.file>public.key</escidoc.aa.public.key.file>
+		<escidoc.aa.private.key.file>private.key</escidoc.aa.private.key.file>
+		<escidoc.aa.config.file>conf.xml</escidoc.aa.config.file>
+		<escidoc.aa.ip.table>ips.xml</escidoc.aa.ip.table>
+		<escidoc.aa.client.start.class>de.mpg.escidoc.services.aa.web.client.EscidocAaClientStart</escidoc.aa.client.start.class>
+		<escidoc.aa.client.finish.class>de.mpg.escidoc.services.aa.web.client.EscidocAaClientFinish</escidoc.aa.client.finish.class>
 
 		<!-- syndication service -->
 		<escidoc.syndication.maximum.records>50</escidoc.syndication.maximum.records>
@@ -701,7 +730,7 @@
 				<jboss.deploy.port>8080</jboss.deploy.port>
 				<jboss.install.dir>${user.home}/jboss/server_eclipse/jboss-4.2.2.GA/jboss-4.2.2.GA</jboss.install.dir>
 				<!-- syndication service -->
-				<escidoc.syndication.service.url>http://localhost:8080/syndication/</escidoc.syndication.service.url>
+				<escidoc.syndication.service.url>http://localhost:8080/syndication</escidoc.syndication.service.url>
 				
 				<!-- URL of stylesheets in common-presentation -->
 				<escidoc.pubman.common.presentation.url>http://localhost:8080/common/</escidoc.pubman.common.presentation.url>
