--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -22,7 +22,7 @@
  CDDL HEADER END
 
 
- Copyright 2006-2010 Fachinformationszentrum Karlsruhe Gesellschaft
+ Copyright 2006-2010 Fachinformationszentrum Karlsruhe GesellschaftMPG
  für wissenschaftlich-technische Information mbH and Max-Planck-
  Gesellschaft zur Förderung der Wissenschaft e.V.
  All rights reserved. Use is subject to license terms.
@@ -454,7 +454,7 @@
 		<escidoc.pubman.contact.url>http://colab.mpdl.mpg.de/mediawiki/PubMan_Support</escidoc.pubman.contact.url>
 		
 		<!-- Properties for PubMan standard theme-->
-		<escidoc.pubman.stylesheet.standard.url>/common/resources/cssFramework/themes/skin_MPG/styles/theme.css</escidoc.pubman.stylesheet.standard.url>
+		<escidoc.pubman.stylesheet.standard.url>/common/resources/cssFramework/themes/skin_blue/styles/theme.css</escidoc.pubman.stylesheet.standard.url>
 		<escidoc.pubman.stylesheet.standard.type>stylesheet</escidoc.pubman.stylesheet.standard.type>
 		<escidoc.pubman.stylesheet.standard.apply>true</escidoc.pubman.stylesheet.standard.apply>
 		
@@ -474,7 +474,7 @@
 		<escidoc.common.presentation.url>http://localhost:8080/common/</escidoc.common.presentation.url>
 
 		<!-- Properties for common standard theme-->
-		<escidoc.common.stylesheet.standard.url>/common/resources/cssFramework/themes/skin_MPG/styles/theme.css</escidoc.common.stylesheet.standard.url>
+		<escidoc.common.stylesheet.standard.url>/common/resources/cssFramework/themes/skin_blue/styles/theme.css</escidoc.common.stylesheet.standard.url>
 		<escidoc.common.stylesheet.standard.type>stylesheet</escidoc.common.stylesheet.standard.type>
 		<escidoc.common.stylesheet.standard.apply>true</escidoc.common.stylesheet.standard.apply>
 		
