--- a/common_services/syndication_presentation/src/test/resources/pubman.properties
+++ b/common_services/syndication_presentation/src/test/resources/pubman.properties
@@ -13,4 +13,6 @@ framework.admin.password=${framework.admin.password}
 
 escidoc.syndication.feeds.xml.path=${escidoc.syndication.feeds.xml.path}
 
+escidoc.syndication.service.url=${escidoc.syndication.service.url}
+
 
