--- a/common_services/syndication_ear/src/main/resources/pubman.properties
+++ b/common_services/syndication_ear/src/main/resources/pubman.properties
@@ -16,3 +16,5 @@ framework.admin.username=${framework.admin.username}
 framework.admin.password=${framework.admin.password}
 
 escidoc.syndication.feeds.xml.path=${escidoc.syndication.feeds.xml.path}
+
+escidoc.syndication.service.url=${escidoc.syndication.service.url}
