--- a/common_services/aa_presentation/pom.xml
+++ b/common_services/aa_presentation/pom.xml
@@ -31,14 +31,14 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.57-SNAPSHOT</version>
+		<version>1.0.57</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>aa_presentation</artifactId>
 	<packaging>war</packaging>
 	<name>aa_presentation</name>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>0.1.0</version>
 	<build>
 		<resources>
 			<resource>
@@ -117,7 +117,7 @@
 								</goals>
 								<configuration>
 									<tasks>
-										<jar destfile="${project.build.directory}/${project.artifactId}-${project.version}-standalone.war" basedir="${project.build.directory}/${project.artifactId}-${project.version}"/>
+										<jar destfile="${project.build.directory}/${project.artifactId}-${project.version}-standalone.war" basedir="${project.build.directory}/${project.artifactId}-${project.version}" />
 									</tasks>
 								</configuration>
 							</execution>
@@ -149,7 +149,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.57-SNAPSHOT</version>
+			<version>1.1.57</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -162,7 +162,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>aa_logic</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
+			<version>0.1.0</version>
 			<type>jar</type>
 			<scope>provided</scope>
 		</dependency>
