--- a/common_services/sword_presentation/pom.xml
+++ b/common_services/sword_presentation/pom.xml
@@ -30,13 +30,13 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.57</version>
+		<version>1.0.58-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>sword_presentation</artifactId>
 	<name>sword_presentation</name>
-	<version>1.0.36</version>
+	<version>1.0.37-SNAPSHOT</version>
 	<packaging>war</packaging>
 
 
