Updated common presentation version
Former-commit-id: 70aa46f5dfe5a919ca99cd99edba8688c151e66a

--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -858,7 +858,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_presentation</artifactId>
-			<version>1.0.45</version>
+			<version>1.0.46-SNAPSHOT</version>
 			<type>war</type>
 			<scope>compile</scope>
 		</dependency>
