--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -1,22 +1,23 @@
-<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<artifactId>pubman</artifactId>
 		<groupId>de.mpg.escidoc.pubman</groupId>
-		<version>6.3.1-SNAPSHOT</version>
+		<version>7.0.0-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.pubman</groupId>
 	<artifactId>pubman_ear</artifactId>
 	<name>pubman_ear</name>
 	<packaging>ear</packaging>
-	<version>6.3.1-SNAPSHOT</version>
-
+	<version>7.0.0-SNAPSHOT</version>
+	
 	<scm>
 		<connection>scm:svn:https://zim02.gwdg.de/repos/pubman/trunk/pubman/pubman_ear</connection>
 		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/pubman/trunk/pubman/pubman_ear</developerConnection>
 		<url>https://zim02.gwdg.de/repos/common/</url>
 	</scm>
-
+	
 	<build>
 		<plugins>
 			<plugin>
@@ -98,9 +99,7 @@
 						<jarModule>
 							<groupId>de.mpg.escidoc.services</groupId>
 							<artifactId>framework_access</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 <!--						<jarModule>-->
 <!--							<groupId>de.mpg.escidoc.services</groupId>-->
@@ -112,9 +111,7 @@
 						<jarModule>
 							<groupId>de.mpg.escidoc.services</groupId>
 							<artifactId>cone</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>xmlbeans</groupId>
@@ -166,171 +163,123 @@
 						<jarModule>
 							<groupId>org.jibx</groupId>
 							<artifactId>jibx-run</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>stax</groupId>
 							<artifactId>stax</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>commons-httpclient</groupId>
 							<artifactId>commons-httpclient</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>commons-discovery</groupId>
 							<artifactId>commons-discovery</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>jasperreports</groupId>
 							<artifactId>jasperreports</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>axis</groupId>
 							<artifactId>axis</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>wss4j</groupId>
 							<artifactId>wss4j</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>net.sf.saxon</groupId>
 							<artifactId>saxon</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>net.sf.saxon</groupId>
 							<artifactId>saxon-dom</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>trinidad</groupId>
 							<artifactId>trinidad-api</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>trinidad</groupId>
 							<artifactId>trinidad-impl</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>commons-beanutils</groupId>
 							<artifactId>commons-beanutils</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>com.lowagie</groupId>
 							<artifactId>itext</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>javabib</groupId>
 							<artifactId>javabib</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>org.apache.xmlbeans</groupId>
 							<artifactId>xmlbeans</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>org.mulgara</groupId>
 							<artifactId>itql</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>org.dspace</groupId>
 							<artifactId>cql-java</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
-
+						
 						<jarModule>
 							<groupId>commons-digester</groupId>
 							<artifactId>commons-digester</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>richfaces</groupId>
 							<artifactId>richfaces-api</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>richfaces</groupId>
 							<artifactId>richfaces-impl</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>richfaces</groupId>
 							<artifactId>richfaces-ui</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>jsf-facelets</groupId>
 							<artifactId>jsf-facelets</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>postgresql</groupId>
 							<artifactId>postgresql</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>urlrewrite</groupId>
 							<artifactId>urlrewrite</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>jfree</groupId>
@@ -460,7 +409,7 @@
 			</plugin>
 		</plugins>
 	</build>
-
+	
 	<dependencies>
 		<dependency>
 			<groupId>axis</groupId>
@@ -483,83 +432,83 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>framework_access</artifactId>
-			<version>1.0.60</version>
+			<version>1.0.61-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.57</version>
+			<version>1.1.58-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>citationmanager</artifactId>
-			<version>1.0.62</version>
+			<version>1.0.63-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>dataacquisition</artifactId>
-			<version>1.0.54</version>
+			<version>1.0.55-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>structuredexportmanager</artifactId>
-			<version>1.0.60</version>
+			<version>1.0.61-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>validation</artifactId>
-			<version>1.0.64</version>
+			<version>1.0.65-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>validation_presentation</artifactId>
-			<version>1.0.64</version>
+			<version>1.0.65-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>cone_presentation</artifactId>
-			<version>1.2.16</version>
+			<version>1.2.17-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>dataacquisition_presentation</artifactId>
-			<version>1.0.54</version>
+			<version>1.0.55-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>transformation</artifactId>
-			<version>1.0.45</version>
+			<version>1.0.46-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>aa_presentation</artifactId>
-			<version>0.1.0</version>
+			<version>0.1.1-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>aa_logic</artifactId>
-			<version>0.1.0</version>
+			<version>0.1.1-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -571,56 +520,56 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>search</artifactId>
-			<version>1.0.57</version>
+			<version>1.0.58-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>search_presentation</artifactId>
-			<version>1.0.57</version>
+			<version>1.0.58-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>syndication_presentation</artifactId>
-			<version>1.0.41</version>
+			<version>1.0.42-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.pubman</groupId>
 			<artifactId>pubman_logic</artifactId>
-			<version>6.3.1-SNAPSHOT</version>
+			<version>7.0.0-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.pubman</groupId>
 			<artifactId>pubman_presentation</artifactId>
-			<version>6.3.1-SNAPSHOT</version>
+			<version>7.0.0-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>sword_presentation</artifactId>
-			<version>1.0.36</version>
+			<version>1.0.37-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>cone</artifactId>
-			<version>1.2.16</version>
+			<version>1.2.17-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>jar</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>pid_cache_presentation</artifactId>
-			<version>0.1.20</version>
+			<version>0.1.21-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
@@ -862,9 +811,9 @@
 			<type>war</type>
 			<scope>compile</scope>
 		</dependency>
-		
+	
 	</dependencies>
-
+	
 	<profiles>
 		<profile>
 			<id>jboss42</id>
@@ -903,7 +852,7 @@
 										<copy overwrite="true" file="${project.build.directory}/classes/pubman.properties" todir="${project.build.directory}/jboss/server/conf" />
                                         <!-- copy over the validation datasource descriptor -->
 										<copy overwrite="true" file="${project.build.directory}/classes/pid-cache-ds.xml" todir="${project.build.directory}/jboss/server/deploy" />
-
+									
 									</tasks>
 								</configuration>
 							</execution>
@@ -927,7 +876,7 @@
                                             <xslt processor="trax" in="${jboss.install.dir}/server/default/deploy/properties-service.xml" style="${project.build.directory}/classes/properties-service-transform.xsl" out="${project.build.directory}/properties-service.temp" />
                                             <copy overwrite="true" file="${project.build.directory}/properties-service.temp" toFile="${jboss.install.dir}/server/default/deploy/properties-service.xml"> </copy>
                                         -->
-
+									
 									</tasks>
 								</configuration>
 							</execution>
@@ -1046,7 +995,7 @@
 							</execution>
 						</executions>
 					</plugin>
-					<!-- Selenium tests from JUnits -->					
+					<!-- Selenium tests from JUnits -->
 					<plugin>
 						<artifactId>maven-surefire-plugin</artifactId>
 						<executions>
@@ -1068,7 +1017,7 @@
 							</execution>
 						</executions>
 					</plugin>
-
+				
 				</plugins>
 			</build>
 		</profile>
