--- a/pubman/pubman_logic_ear/pom.xml
+++ b/pubman/pubman_logic_ear/pom.xml
@@ -25,18 +25,19 @@
  für wissenschaftlich-technische Information mbH and Max-Planck-
  Gesellschaft zur Förderung der Wissenschaft e.V.
  All rights reserved. Use is subject to license terms.
---><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+-->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<artifactId>pubman</artifactId>
 		<groupId>de.mpg.escidoc.pubman</groupId>
-		<version>6.3.1-SNAPSHOT</version>
+		<version>7.0.0-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.pubman</groupId>
 	<artifactId>pubman_logic_ear</artifactId>
 	<name>pubman_logic_ear</name>
 	<packaging>ear</packaging>
-	<version>6.3.1-SNAPSHOT</version>
+	<version>7.0.0-SNAPSHOT</version>
 	
 	<scm>
 		<connection>scm:svn:https://zim02.gwdg.de/repos/pubman/trunk/pubman/pubman_logic_ear</connection>
@@ -128,164 +129,118 @@
 						<jarModule>
 							<groupId>org.jibx</groupId>
 							<artifactId>jibx-run</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>stax</groupId>
 							<artifactId>stax</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>commons-discovery</groupId>
 							<artifactId>commons-discovery</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>jasperreports</groupId>
 							<artifactId>jasperreports</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>axis</groupId>
 							<artifactId>axis</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>wss4j</groupId>
 							<artifactId>wss4j</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>net.sf.saxon</groupId>
 							<artifactId>saxon</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>net.sf.saxon</groupId>
 							<artifactId>saxon-dom</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>trinidad</groupId>
 							<artifactId>trinidad-api</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>trinidad</groupId>
 							<artifactId>trinidad-impl</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>commons-beanutils</groupId>
 							<artifactId>commons-beanutils</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>com.lowagie</groupId>
 							<artifactId>itext</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>javabib</groupId>
 							<artifactId>javabib</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>org.apache.xmlbeans</groupId>
 							<artifactId>xmlbeans</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>org.mulgara</groupId>
 							<artifactId>itql</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>org.dspace</groupId>
 							<artifactId>cql-java</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
-
+						
 						<jarModule>
 							<groupId>commons-digester</groupId>
 							<artifactId>commons-digester</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>richfaces</groupId>
 							<artifactId>richfaces-api</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>richfaces</groupId>
 							<artifactId>richfaces-impl</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>richfaces</groupId>
 							<artifactId>richfaces-ui</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>jsf-facelets</groupId>
 							<artifactId>jsf-facelets</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>postgresql</groupId>
 							<artifactId>postgresql</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>urlrewrite</groupId>
 							<artifactId>urlrewrite</artifactId>
-							<includeInApplicationXml>
-                                true
-                            </includeInApplicationXml>
+							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
 							<groupId>jfree</groupId>
@@ -474,55 +429,55 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>framework_access</artifactId>
-			<version>1.0.60</version>
+			<version>1.0.61-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.57</version>
+			<version>1.1.58-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>citationmanager</artifactId>
-			<version>1.0.62</version>
+			<version>1.0.63-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>dataacquisition</artifactId>
-			<version>1.0.54</version>
+			<version>1.0.55-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>structuredexportmanager</artifactId>
-			<version>1.0.60</version>
+			<version>1.0.61-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>validation</artifactId>
-			<version>1.0.64</version>
+			<version>1.0.65-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>validation_presentation</artifactId>
-			<version>1.0.64</version>
+			<version>1.0.65-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>transformation</artifactId>
-			<version>1.0.45</version>
+			<version>1.0.46-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
@@ -535,28 +490,28 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>search</artifactId>
-			<version>1.0.57</version>
+			<version>1.0.58-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>search_presentation</artifactId>
-			<version>1.0.57</version>
+			<version>1.0.58-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>syndication_presentation</artifactId>
-			<version>1.0.41</version>
+			<version>1.0.42-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.pubman</groupId>
 			<artifactId>pubman_logic</artifactId>
-			<version>6.3.1-SNAPSHOT</version>
+			<version>7.0.0-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
