Property pointi8ng to test-coreservice
Former-commit-id: 6648d0f7b823e367250276bc0a7aa5144cde81ff

--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -750,6 +750,12 @@
 				<activeByDefault>false</activeByDefault>
 			</activation>
 			<properties>
+					
+				<!-- URL of the FIZ framework instance -->
+				<escidoc.framework_access.framework.url>http://test-coreservice.mpdl.mpg.de</escidoc.framework_access.framework.url>
+				<escidoc.common.framework.url>http://test-coreservice.mpdl.mpg.de</escidoc.common.framework.url>
+				<escidoc.framework_access.login.url>http://test-coreservice.mpdl.mpg.de</escidoc.framework_access.login.url>
+
 				<escidoc.cone.service.url>http://dev-pubman.mpdl.mpg.de/cone/</escidoc.cone.service.url>
 				<escidoc.import.database.name>/usr/share/jboss/server/default/data/hypersonic/localDB</escidoc.import.database.name>
 				<escidoc.import.surveyor.interval>15</escidoc.import.surveyor.interval>
