--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -48,6 +48,7 @@ escidoc.pubman.component.pattern=${escidoc.pubman.component.pattern}
 
 # URL for stylesheets in common-presentation
 escidoc.pubman.common.presentation.url=${escidoc.pubman.common.presentation.url}
+escidoc.common.presentation.url=${escidoc.common.presentation.url}
 
 # Links from PubMan menu
 escidoc.pubman.policy.url=${escidoc.pubman.policy.url}
@@ -264,6 +265,7 @@ escidoc.transformation.endnote.ice.stylesheet.filename=${escidoc.transformation.
 escidoc.transformation.endnote.stylesheet.filename=${escidoc.transformation.endnote.stylesheet.filename}
 escidoc.transformation.endnote.configuration.filename=${escidoc.transformation.endnote.configuration.filename}
 escidoc.transformation.edoc.configuration.filename=${escidoc.transformation.edoc.configuration.filename}
+escidoc.transformation.bibtex.configuration.filename=${escidoc.transformation.bibtex.configuration.filename}
 escidoc.transformation.mab.stylesheet.filename=${escidoc.transformation.mab.stylesheet.filename}
 escidoc.transformation.report.sortorder.filename=${escidoc.transformation.report.sortorder.filename}
 
