dev-pubman properties
Former-commit-id: 67811ebe56419f967e9a3905d8255359f5d01ed9

--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -781,6 +781,10 @@
 				<!-- URL of stylesheets in common-presentation -->
 				<escidoc.common.presentation.url>http://dev-pubman.mpdl.mpg.de/common/</escidoc.common.presentation.url>
 				
+				<!-- AA -->
+				<escidoc.aa.instance.url>http://dev-pubman.mpdl.mpg.de/aa_presentation</escidoc.aa.instance.url>
+				<escidoc.aa.default.target>http://dev-pubman.mpdl.mpg.de/aa_presentation/clientLogin</escidoc.aa.default.target>
+
 			</properties>
 			<distributionManagement>
 				<site>
