new axis-wsdl4j dependency
Former-commit-id: 36e1eec6d7c78fa74daa5c9a9f9134e422f5da69

--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -812,6 +812,13 @@
 			<scope>compile</scope>
 		</dependency>
 	
+		<dependency>
+			<groupId>axis</groupId>
+			<artifactId>axis-wsdl4j</artifactId>
+			<version>1.5.1</version>
+			<type>jar</type>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 	
 	<profiles>
