--- a/pubman/pubman_logic_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_logic_ear/src/main/resources/pubman.properties
@@ -50,9 +50,12 @@ escidoc.pubman.contact.url=${escidoc.pubman.contact.url}
 
 # URL of the FIZ framework instance
 escidoc.framework_access.framework.url=${escidoc.common.framework.url}
+escidoc.framework_access.login.url=${escidoc.framework_access.login.url}
 
 # Identifier of the content type "publication" in the actual framework instance
 escidoc.framework_access.content-model.id.publication=${escidoc.framework_access.content-model.id.publication}
+
+escidoc.framework_access.context.id.test = ${escidoc.framework_access.context.id.test}
 
 
 # Due to a historical defect, QName was released with multiple 
@@ -76,6 +79,8 @@ escidoc.validation.refresh.interval=${escidoc.validation.refresh.interval}
 # Used for validation initialization
 framework.admin.username=${framework.admin.username}
 framework.admin.password=${framework.admin.password}
+framework.scientist.username=${framework.scientist.username}
+framework.scientist.password=${framework.scientist.password}
 
 # eSciDoc-ObjId of the external Organisation
 escidoc.pubman.external.organisation.id=${escidoc.pubman.external.organisation.id}
@@ -166,3 +171,5 @@ framework.editor.password=${framework.editor.password}
 
 framework.scientist.username=${framework.scientist.username}
 framework.scientist.password=${framework.scientist.password}
+
+
