--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -69,6 +69,11 @@ escidoc.pubman.stylesheet.classic.url=${escidoc.pubman.stylesheet.classic.url}
 escidoc.pubman.stylesheet.classic.type=${escidoc.pubman.stylesheet.classic.type}
 escidoc.pubman.stylesheet.classic.apply=${escidoc.pubman.stylesheet.classic.apply}
 
+<!-- Properties for PubMan special theme-->
+escidoc.pubman.stylesheet.special.url=${escidoc.pubman.stylesheet.special.url}
+escidoc.pubman.stylesheet.special.type=${escidoc.pubman.stylesheet.special.type}
+escidoc.pubman.stylesheet.special.apply=${escidoc.pubman.stylesheet.special.apply}
+
 # Properties for common standard theme
 escidoc.common.stylesheet.standard.url=${escidoc.common.stylesheet.standard.url}
 escidoc.common.stylesheet.standard.type=${escidoc.common.stylesheet.standard.type}
@@ -83,6 +88,11 @@ escidoc.common.stylesheet.contrast.apply=${escidoc.common.stylesheet.contrast.ap
 escidoc.common.stylesheet.classic.url=${escidoc.common.stylesheet.classic.url}
 escidoc.common.stylesheet.classic.type=${escidoc.common.stylesheet.classic.type}
 escidoc.common.stylesheet.classic.apply=${escidoc.common.stylesheet.classic.apply}
+
+<!-- Properties for common special theme-->
+escidoc.common.stylesheet.special.url=${escidoc.pubman.stylesheet.special.url}
+escidoc.common.stylesheet.special.type=${escidoc.pubman.stylesheet.special.type}
+escidoc.common.stylesheet.special.apply=${escidoc.pubman.stylesheet.special.apply}
 
 <!-- URL of the favicon-->
 escidoc.pubman.favicon.url=${escidoc.pubman.favicon.url}
