--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -686,6 +686,9 @@
 		<escidoc.pubman.survey.text />
 		<escidoc.pubman.survey.styles />
 	
+		<!-- Test properties -->
+		<escidoc.framework_access.context.id.test>escidoc:4001</escidoc.framework_access.context.id.test>
+		<framework.admin.id>escidoc:exuser1</framework.admin.id>
 	</properties>
 	
 	<profiles>
