--- a/common_services/cone_ear/src/main/resources/cone.properties
+++ b/common_services/cone_ear/src/main/resources/cone.properties
@@ -21,82 +21,62 @@
 #
 # Copyright 2006-2011 Fachinformationszentrum Karlsruhe Gesellschaft
 # für wissenschaftlich-technische Information mbH and Max-Planck-
-# Gesellschaft zur Förderung der Wissenschaft e.V.
+# Gesellschaft zur Föderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
 
-# Flag to disable the GUI-entry points for UC_PM_SR_03 do advanced search
-
-# URL of this PubMan instance
-escidoc.pubman.instance.url=${escidoc.pubman.instance.url}
-escidoc.pubman.item.pattern=${escidoc.pubman.item.pattern}
-escidoc.pubman.component.pattern=${escidoc.pubman.component.pattern}
-
-# URL of the FIZ framework instance
-escidoc.framework_access.framework.url=${escidoc.common.framework.url}
-
-# URL of the escidoc-core instance you like to logon to
-escidoc.framework_access.login.url=${escidoc.framework_access.login.url}
-
-# Identifier of the content type "publication" in the actual framework instance
-escidoc.framework_access.content-model.id.publication=${escidoc.framework_access.content-model.id.publication}
-
-
-# Due to a historical defect, QName was released with multiple 
-# serialVersionUID values even though its serialization was the
-# same.
-# To workaround this issue, serialVersionUID is set with either
-# a default value or a compatibility value.  To use the
-# compatibility value you have to set the following property to "1.0".
-com.sun.xml.namespace.QName.useCompatibleSerialVersionUID=${com.sun.xml.namespace.QName.useCompatibleSerialVersionUID}
-
-# RE Pattern for retrieving determinators from item xml
-escidoc.content.model.pattern=${escidoc.content.model.pattern}
-escidoc.context.pattern=${escidoc.context.pattern}
-
-# Used for validation initialization
-framework.admin.username=${framework.admin.username}
-framework.admin.password=${framework.admin.password}
-
-# db settings
-db.superuser.login=${db.superuser.login}
-db.superuser.password=${db.superuser.password}
-
-# eSciDoc-ObjId of the external Organisation
-escidoc.pubman.external.organisation.id=${escidoc.pubman.external.organisation.id}
-
 # CoNE service URL
+#
+# The URL the CoNE homepage should be reached at.
+# Looks like "http://www.example.com/cone/"
+# localhost should only be used in development environments
 escidoc.cone.service.url=${escidoc.cone.service.url}
 
-# COntrol of Named Entities database interface class
+# Control of Named Entities database interface class implementing the de.mpg.escidoc.services.cone.Querier interface
+# possible values currently are
+# de.mpg.escidoc.services.cone.MockQuerier (dummy implementation)
+# de.mpg.escidoc.services.cone.MulgaraQuerier (interface to the Mulgara triplestore, might be slightly out-dated
+# de.mpg.escidoc.services.cone.OracleQuerier (interface to an Oracle database)
+# de.mpg.escidoc.services.cone.SQLQuerier (default)
 escidoc.cone.querier.class=${escidoc.cone.querier.class}
 
-# Mulgara server name
+# Mulgara server name (only for MulgaraQuerier)
 escidoc.cone.mulgara.server.name=${escidoc.cone.mulgara.server.name}
 
-# Mulgara server port
+# Mulgara server port (only for MulgaraQuerier)
 escidoc.cone.mulgara.server.port=${escidoc.cone.mulgara.server.port}
 
+# CoNE default language abbreviation (only for MulgaraQuerier)
+# used to import RDF data from a local drive
+escidoc.cone.rdf.path=${escidoc.cone.rdf.path}
+
 # CoNE default language abbreviation
+# of type ISO639-1, default is "en"
 escidoc.cone.language.default=${escidoc.cone.language.default}
 
-# CoNE database configuration
+# CoNE database configuration (for SQLQuerier and OracleQuerier)
+# JDBC Driver class
 escidoc.cone.database.driver.class=${escidoc.cone.database.driver.class}
+# Database server name. Can be set to localhost if on the same machine
 escidoc.cone.database.server.name=${escidoc.cone.database.server.name}
+# Database port (e.g. 5432 for default PostgreSQL instances)
 escidoc.cone.database.server.port=${escidoc.cone.database.server.port}
+# The name of the database, default is "cone"
 escidoc.cone.database.name=${escidoc.cone.database.name}
+# Database user login data with at least DML rights on the cone database
 escidoc.cone.database.user.name=${escidoc.cone.database.user.name}
 escidoc.cone.database.user.password=${escidoc.cone.database.user.password}
 
-#CoNE Maximum number of returned result sets
+#CoNE Maximum number of returned result sets (default is 50)
 escidoc.cone.maximum.results=${escidoc.cone.maximum.results}
 
-# CoNE default language abbreviation
-escidoc.cone.rdf.path=${escidoc.cone.rdf.path}
-
 #Path to the model.xml file
+# Default is "models.xml" which points to the built-in configuration file in cone.jar
+# Change this value if you want to change or create own models. Copy the models.xml file from the Jar
+# and change this property to the location where you put the copy.
 escidoc.cone.modelsxml.path=${escidoc.cone.modelsxml.path}
 
 # URL for stylesheets in common-presentation
+# Default is "/common/"
 escidoc.common.presentation.url=${escidoc.common.presentation.url}
 
 # Properties for common standard theme
@@ -114,15 +94,29 @@ escidoc.common.stylesheet.classic.url=${escidoc.common.stylesheet.classic.url}
 escidoc.common.stylesheet.classic.type=${escidoc.common.stylesheet.classic.type}
 escidoc.common.stylesheet.classic.apply=${escidoc.common.stylesheet.classic.apply}
 
-# AA
+# AA local
+# URL to the AA module, default is "/auth/".
 escidoc.aa.instance.url=${escidoc.aa.instance.url}
+# This should be set when multiple AA modules are used
 escidoc.aa.default.target=${escidoc.aa.default.target}
-escidoc.aa.public.key.file=${escidoc.aa.public.key.file}
+# For a productive system, the key pair MUST be generated anew. If not, the system is unsafe.
+# Creating a pair of keys can be done with
+# de.mpg.escidoc.services.aa.crypto.KeyGenerator
 escidoc.aa.private.key.file=${escidoc.aa.private.key.file}
 
+# AA remote
+# For a productive system, the key pair MUST be generated anew. If not, the system is unsafe.
+# Creating a pair of keys can be done with
+# de.mpg.escidoc.services.aa.crypto.KeyGenerator
+escidoc.aa.public.key.file=${escidoc.aa.public.key.file}
+# An XML configuration that describes the used Authentication mechanism.
+# Default is "conf.xml" which points to a file in aa_presentation.war/WEB-INF/classes
+# To change the configuration, copy this file to a different location and change the property to it.
 escidoc.aa.config.file=${escidoc.aa.config.file}
+# When the AA module is configured to work with the IP authentication, this file is used to identify valid IP adresses.
+# An example can be found at aa_presentation.war/WEB-INF/classes/ips.xml
 escidoc.aa.ip.table=${escidoc.aa.ip.table}
-
+# Depending on the type of authentication chosen, either one class is needed or two (e.g. with eSciDoc authentication).
 #escidoc.aa.client.class=de.mpg.escidoc.services.aa.web.client.IpAaClient
 escidoc.aa.client.start.class=${escidoc.aa.client.start.class}
 escidoc.aa.client.finish.class=${escidoc.aa.client.finish.class}
